2007-02-20  Tor Lillqvist  <tml@novell.com>

	* modules/controller_dx_dinput.c: New file. Low level
	GimpController support for DirectInput controllers on Win32.

	* modules/gimpinputdevicestore.c: Add implementation for
	DirectInput devices.

	* modules/Makefile.am: Add libcontroller_dx_dinput.la with above
	source files.

2007-02-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: reworked shape support. Instead of
	fiddling with pixbuf pixels, do most of the work in the core.

2007-02-20  Sven Neumann  <sven@gimp.org>

	* app/dialogs/authors.xsl: changed XPath expression to only match
	on contributors that have been active in the 2.4 development cycle.

2007-02-20  Tor Lillqvist  <tml@novell.com>

	* configure.in: Add check for DirectX DirectInput header and
	library. To disable, pass --without-directinput. To find the
	DirectInput headers and libraries, one needs to set CPPFLAGS and
	LDFLAGS env vars appropriately for now. It should really add a
	--with-dx-sdk switch instead. Set HAVE_DX_DINPUT config.h macro
	and HAVE_DX_DINPUT Automake conditional.

2007-02-20  Sven Neumann  <sven@gimp.org>

	* app/dialogs/Makefile.am: let authors.h depend on authors.xsl.

	* app/dialogs/authors.h: removed from repository, it's generated.

	* app/dialogs/authors.xsl: only include contributors that have
	contributed to GIMP 2.x. We might want to limit this even further.

2007-02-19  Karine Delvare  <edhel@gimp.org>

	* authors.dtd
	* authors.xml: added mandatory last-active attribute, and added
	several 2.4 contributors.

	* AUTHORS
	* app/dialogs/authors.h: regenerated.

2007-02-19  Manish Singh  <yosh@gimp.org>

	* modules/gimpinputdevicestore.c: gimp_input_device_store_type
	should be set to G_TYPE_NONE in the !HAVE_LIBHAL case.

	* modules/controller_linux_input.c: we can't use
	GIMP_TYPE_INPUT_DEVICE_STORE in the !HAVE_LIBHAL case.

2007-02-19  Michael Natterer  <mitch@gimp.org>

	* modules/gimpinputdevicestore.c: define gimp_input_device_store_type